# lidar_proj

./: .gitignore  README.md  README_CN.md  run.sh
algorithm/: .dev_bash_history  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
algorithm/cmake/: libs.cmake  setting.cmake
algorithm/cmake/cuda/: cuda.cmake  detect_compute_capability.cmake
algorithm/cmake/toolchains/: cmake_qnx.toolchain.cmake
algorithm/config/rviz/: localization.rviz  perception.rviz
algorithm/config/system_config/communication_config/: rs_communication.yaml
algorithm/config/system_config/communication_config/custom/: config.yaml  config_dtgh.yaml  config_dtgh_json.yaml  config_xingyun.yaml
algorithm/config/system_config/communication_config/native/: config.yaml
algorithm/config/system_config/communication_config/native_bytes/: config_2_x.yaml  config_3_0.yaml  config_3_1.yaml
algorithm/config/system_config/communication_config/proto/: config.yaml
algorithm/config/system_config/communication_config/ros/: config.yaml
algorithm/config/system_config/communication_config/ros2/: config.yaml
algorithm/config/system_config/communication_config/v2r/: config.yaml
algorithm/config/system_config/communication_config/websocket/: config.yaml
algorithm/config/system_config/communication_config/websocket/fill_rois/: roi.yaml
algorithm/config/system_config/general_config/: config.yaml
algorithm/config/system_config/localization_config/: localization_config  rs_localization.yaml
algorithm/config/system_config/localization_config/default_config/: default.yaml  lidar_registra_init.yaml  rs_map_server.yaml
algorithm/config/system_config/localization_config/default_config/Matcher/: evaluator_matcher.yaml  init_matcher.yaml  regular_matcher.yaml
algorithm/config/system_config/localization_config/default_config/Observer/: GnssObserver.yaml  LidarEsObserver.yaml  ProbabilityHistogramObserver.yaml
algorithm/config/system_config/perception_config/: rs_perception.yaml
algorithm/config/system_config/perception_config/camera/: rs_camera.yaml
algorithm/config/system_config/perception_config/hdmap/: roi.yaml  roi_old.yaml
algorithm/config/system_config/perception_config/lidar/: rs_lidar.yaml
algorithm/config/system_config/preprocessing_config/: rs_preprocessing.yaml
algorithm/config/system_config/sensor_config/lidar/: rs_lidar.yaml
algorithm/config/system_config/sensor_config/other_sensors/: rs_gnss.yaml  rs_imu.yaml  rs_odom.yaml
algorithm/config/usr_config/: calibration.yaml  usr_config.yaml
algorithm/demo/: CMakeLists.txt  auto_align.cpp  rs_sdk_demo.cpp
algorithm/docker/: add.dockerfile  docker-compose-dev.yaml  docker-compose.yaml  env.sh
algorithm/docker/cuda11X/: Dockerfile  start.sh
algorithm/docker/cuda12X/: Dockerfile  build.sh
algorithm/docs/rviz_doc/: rivz显示配置说明.md
algorithm/include/: rs_sdk_config.h
algorithm/receiver_demo_beta/: CMakeLists.txt  receiver_test_demo.cpp
algorithm/rs_tool/: CHANGELOG.md  tools.cmake
algorithm/rs_tool/rs_application/: CMakeLists.txt
algorithm/rs_tool/rs_application/cmake/: srcs.cmake
algorithm/rs_tool/rs_application/include/rs_application/: application.h  base_application.h  version.h
algorithm/rs_tool/rs_application/src/: application.cpp  base_application.cpp  version.cpp
algorithm/rs_tool/rs_application/src/strategy/: pseries_application.cpp  smartsensor_application.cpp  v2r_application.cpp
algorithm/rs_tool/rs_application/src/utils/: perception_save_result.cpp
algorithm/rs_tool/rs_beta/: CMakeLists.txt
algorithm/rs_tool/rs_beta/cmake/: srcs.cmake
algorithm/rs_tool/rs_beta/src/mechanic_sort/: rs_mechanic_sort.cpp
algorithm/rs_tool/rs_beta/src/perception/: beta_perception.cpp
algorithm/rs_tool/rs_beta/src/rviz_display/: beta_display.cpp
algorithm/rs_tool/rs_custom/: CMakeLists.txt
algorithm/rs_tool/rs_custom/cmake/: srcs.cmake
algorithm/rs_tool/rs_custom/message/robosense/ros/ros_msg_ws/src/: CMakeLists.txt  package.xml
algorithm/rs_tool/rs_custom/message/robosense/ros2/ros2_msg_ws/src/perception_ros2_msg/: CMakeLists.txt  package.xml
algorithm/rs_tool/rs_custom/message/robosense/ros2/ros2_msg_ws/src/perception_ros2_msg/msg/: CoreInfo.msg  Object.msg  Point4f.msg  SupplementInfo.msg
algorithm/rs_tool/rs_custom/third_part/lz4/: readme.md
algorithm/rs_tool/rs_dependence/: CMakeLists.txt
algorithm/rs_tool/rs_dependence/cmake/: dependence.cmake  setting.cmake  srcs.cmake
algorithm/rs_tool/rs_dependence/include/rs_dependence/: rs_dependence_manager.h  utils.h  utils.h.in
algorithm/rs_tool/rs_dependence/src/: rs_dependence_manager.cpp
algorithm/rs_tool/rs_sensor/: CMakeLists.txt
algorithm/rs_tool/rs_sensor/cmake/: srcs.cmake
algorithm/rs_tool/rs_sensor/include/rs_sensor/: manager.h
algorithm/rs_tool/rs_sensor/include/rs_sensor2/: sensor_manager_2.h
algorithm/rs_tool/rs_sensor/src/: manager.cpp
algorithm/rs_tool/rs_sensor/src/rs_sensor2/: sensor_manager_2.cpp
algorithm/rs_tool/rviz_display/: CMakeLists.txt
algorithm/rs_tool/rviz_display/cmake/: srcs.cmake
catkin_ws/src/my_rtsp_streamer/: CMakeLists.txt
catkin_ws/src/my_rtsp_streamer/config/: streams.yaml
catkin_ws/src/my_rtsp_streamer/include/my_rtsp_streamer/: rtsp_streamer.h
catkin_ws/src/my_rtsp_streamer/src/: rtsp_streamer.cpp
catkin_ws/src/pcd_saver/: CMakeLists.txt  CMakeLists.txt_old  package.xml
catkin_ws/src/pcd_saver/src/: pcd_saver.cpp
config/: config.yaml  config.yaml.manwan
docker/: docker.sh
docker/cuda11X/: build.sh
docker/cuda12X/: start.sh
launch/: start.launch
tools/camera/: get_video.py
tools/catkin_wc/src/ros_rtsp/: about_pipeline.md
tools/catkin_wc/src/ros_rtsp/config/: stream_setup.yaml
tools/lidar/: run.sh
tools/lidar/src/my_rtsp_streamer/: package.xml
tools/lidar/src/my_rtsp_streamer/config/: streams.yaml
tools/lidar/src/my_rtsp_streamer/launch/: rtsp_streamer.launch
tools/lidar/src/my_rtsp_streamer/src/: rtsp_streamer_node.cpp
tools/ros_to_rtsp/src/ros_rtsp/: README.md
tools/ros_to_rtsp/src/ros_rtsp/config/: stream_setup.yaml
(+668 files in other folders)
